@@ -6,11 +6,11 @@
 	[ :LNOT: REFERENCE
 		ARM
 		BKPT	#1234
-		BKPT.W	#&Feba
+		BKPT.W	&Feba
 
 		THUMB
 		BKPT	#0xC2
-		BKPT.N	#&C2
+		BKPT.N	&C2
 	|
 		ARM
 		DCI &e1204d72	; bkpt	0x04d2
