@@ -3,6 +3,7 @@
 		AREA |C$$code|, CODE, READONLY
 
 	[ :LNOT: REFERENCE
+		ARM
 		SWI	1234
 		SWI	#1234
 		SVC	1234
@@ -11,7 +12,12 @@
 		SWICC	#1234
 		SVCCC	1234
 		SVCCC	#1234
+
+		THUMB
+		SWI	&FF
+		SWI.N	2 -1
 	|
+		ARM
 		DCI	&EF0004D2	; SWI 1234
 		DCI	&EF0004D2	; SWI #1234
 		DCI	&EF0004D2	; SVC 1234
@@ -20,12 +26,19 @@
 		DCI	&3F0004D2	; SWICC #1234
 		DCI	&3F0004D2	; SVCCC 1234
 		DCI	&3F0004D2	; SVCCC #1234
+
+
+		THUMB
+		DCI.N	&DFFF
+		DCI.N	&DF01
 	]
 
 	[ :LNOT: REFERENCE
+		ARM
 		SWI	Shell_Create
 Shell_Create	*	&805c0
 	|
+		ARM
 		SWI	&805c0
 	]
 
